--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -1,84 +1,86 @@
-- title: Getting started
+- title: Overview
   pages:
-    - path: /getting-started
-- title: Demo
+    - title: DB overview
+      path: /Overview/db_overview
+- title: Throughput
   pages:
-    - path: /demo
-- title: Gallery
+    - title: Workloads
+      path: /Throughput/workloads
+    - title: Workload assignment
+      path: /Throughput/workload_assignment
+    - title: Service classes
+      path: /Throughput/service_classes
+    - title: Members
+      path: /Throughput/members
+    - title: Skew monitor
+      path: /Throughput/skew_monitor
+    - title: Time spent
+      path: /Throughput/time_spent  
+- title: Top consumers
   pages:
-    - path: /gallery
-- title: Contributions
+    - title: Units of work
+      path: /Top_consumers/units_of_work
+    - title: Connections
+      path: /Top_consumers/connections
+    - title: Activities
+      path: /Top_consumers/activities
+- title: Sessions
   pages:
-    - path: /contributions
-- title: Guides
+    - title: Connections
+      path: /Sessions/connections
+- title: Statements
   pages:
-    - title: Authoring MDX
-      path: /guides/MDX
-    - title: Configuration
-      path: /guides/configuration
-    - title: Gatsby Sketch kit
-      path: /guides/sketch-kit
-    - title: Hosting
-      path: /guides/hosting
-    - title: Navigation
-      path: /guides/navigation/sidebar
-    - title: npm scripts
-      path: /guides/npm-scripts
-    - title: Shadowing
-      path: /guides/shadowing
-    - title: Styling
-      path: /guides/styling
-    - title: v2.0 Migration
-      path: /guides/v2-migration
-- title: Components
+    - title: In-flight statements
+      path: /Statements/in-flight_statements
+    - title: Executed SQL (pkg cache)
+      path: /Statements/executed_sql
+- title: Throughput
   pages:
-    - title: Accordion
-      path: /components/Accordion
-    - title: AnchorLinks
-      path: /components/AnchorLinks
-    - title: ArtDirection
-      path: /components/ArtDirection
-    - title: ArticleCard
-      path: /components/ArticleCard
-    - title: Aside
-      path: /components/Aside
-    - title: Caption
-      path: /components/Caption
-    - title: Code blocks
-      path: /components/code-blocks
-    - title: DoDontExample
-      path: /components/DoDontExample
-    - title: DoDontRow
-      path: /components/DoDontRow
-    - title: FeatureCard
-      path: /components/FeatureCard
-    - title: FeedbackDialog
-      path: /components/FeedbackDialog
-    - title: GifPlayer
-      path: /components/GifPlayer
-    - title: Grid
-      path: /components/Grid
-    - title: ImageCard
-      path: /components/ImageCard
-    - title: ImageGallery
-      path: /components/ImageGallery
-    - title: InlineNotification
-      path: /components/InlineNotification
-    - title: Markdown
-      path: /components/markdown
-    - title: MediumPosts
-      path: /components/MediumPosts
-    - title: MiniCard
-      path: /components/MiniCard
-    - title: PageDescription
-      path: /components/PageDescription
-    - title: ResourceCard
-      path: /components/ResourceCard
-    - title: SquareCard
-      path: /components/SquareCard
-    - title: Tabs
-      path: /components/Tabs
-    - title: Title
-      path: /components/Title
-    - title: Video
-      path: /components/Video
+    - title: Bufferpools
+      path: /IO/bufferpools
+    - title: Prefetchers
+      path: /IO/prefetchers
+    - title: Table spaces
+      path: /IO/table_spaces
+    - title: Table
+      path: /IO/table
+    - title: Logging performance
+      path: /IO/logging_performance
+    - title: CF status
+      path: /IO/cf_status
+    - title: pureScale performance
+      path: /IO/purescale_performance
+- title: Locking
+  pages:
+    - title: Lock statistics
+      path: /Locking/lock_statistics
+    - title: Blockers, waiters
+      path: /Locking/blockers_waiters
+    - title: Locks
+      path: /Locking/locks
+    - title: Locked objects
+      path: /Locking/locked_objects_mdx
+- title: Memory
+  pages:
+    - title: Database memory pools
+      path: /Memory/database_memory_pools
+    - title: Instance memory sets
+      path: /Memory/instance_memory_sets
+- title: Storage
+  pages:
+    - title: Table space utilization
+      path: /Storage/table_space_utilization
+    - title: Table utilization
+      path: /Storage/table_utilization
+- title: Other
+  pages:
+    - title: Utilities
+      path: /Other/utilities
+    - title: REORG
+      path: /Other/reorg
+    - title: HADR
+      path: /Other/hadr
+    - title: Federation
+      path: /Other/federation
+    - title: Table movement
+      path: /Other/table_movement
