--- a/src/data/nav-items.yaml
+++ b/src/data/nav-items.yaml
@@ -1,3 +1,13 @@
+- title: Introduction
+  pages:
+    - path: /General/introduction
+- title: Installation
+  pages:
+    - path: /General/installation
+- title: Getting started
+  pages:
+    - path: /General/getting_started
+  hasDivider: true
 - title: Overview
   pages:
     - title: DB overview
@@ -84,3 +94,4 @@
       path: /Other/federation
     - title: Table movement
       path: /Other/table_movement
+  
